--- a/1_experimental_techniques.tex
+++ b/1_experimental_techniques.tex
@@ -350,7 +350,7 @@ A scheme of the setup is presented:
     \label{fig:internal_reflectance}
 \end{figure}
 
-\section{Contact angle Measurement}
+\section{Contact Angle Measurement}
 \label{sec:contact_angle_measurement}
 The determination of the properties of the solid surface of different samples is of primary interest in applied sciences, since its importance spans over a wide range of cases \cite{kwokContactAngleMeasurement1999}. The analysis of the surface energy and wettability (i.e. the tendency of one fluid to spread on or adhere to a solid surface) of a liquid toward a solid substrate is an effective approach to obtain these surface properties, in particular, contact angle measurement is considered as one of the simplest techniques capable of providing some valid insights in the determination of the surface tension of a solid sample.
 \\
