--- a/2_glass_manufacturing.tex
+++ b/2_glass_manufacturing.tex
@@ -113,7 +113,7 @@ Both the bulk of the pad and the surface are full of micropores, which are usefu
 \end{figure}
 During CMP, the physical properties of the pad, such as hardness and surface roughness, are expected to change due to mechanical loads and chemical reactions occurring during the polishing. These changes could significantly impact the process, so they should be limited to ensure consistent results.
 
-\subsection{Polishing Suspension (Slurry)}
+\subsection{Polishing Suspension}
 \label{subsec:polishing_slurry}
 
 The slurry used in CMP is a complex mixture consisting of abrasive materials dispersed in water along with various chemicals, including oxidants, inhibitors, and bases to adjust the pH. Abrasive particles such as \ce{SiO2}, \ce{CeO2}, and \ce{Al2O3}, with sizes ranging from 10 nanometers to some micrometers, are commonly used in industrial CMP processes. The mass concentration of the polishing agent relative to the total slurry usually spans from 5\% to 30\% \cite{bliedtnerOptiktechnologieGrundlagenVerfahrenAnwendungenBeispieleOptical2010}.
@@ -144,7 +144,7 @@ during classical manufacturing of optical surfaces. (Gerhard 2017)}
 \end{figure}
 As a result of these processes, visually clean polished glass surfaces can exhibit significant optically active contaminations. These may include surface adherent contaminants such as hydrocarbonaceous compounds and residues from polishing agents. The remaining silica gel layer and contaminants on the surface can also lead to negative effects such an increase in near-surface absorption consequently lowering the laser-induced damage threshold \cite{neauportPolishinginducedContaminationFused2005}.
 
-\section{Diffusion}
+\section{Fundamentals of Diffusion}
 \label{subsec:diff}
 
 As already mentioned in Chapter~\ref{sec:CMP}, diffusion is a core process in optics manufacturing; following is a brief exposition on the main characteristics of the mechanism.
