--- a/3_research_premises.tex
+++ b/3_research_premises.tex
@@ -23,7 +23,7 @@ After having thought about the parameters we could vary, we settled on a collect
     \item Type of glass: glasses with different compositions are used in optics because their refractive index is strongly dependent on the density of the material \cite{ritlandRelationRefractiveIndex1955} and by introducing different and heavier elements in the glass, the manufacturer can tune its optical properties to the desired ones. Having a high concentration of different elemental species inside the glass could change the parameters that regulate diffusion at the surface.
 \end{itemize}
 
-\section{Theoretical Prediction}
+\section{Theoretical Predictions}
 \label{sec:theoretical_prediction}
 As already mentioned in Chapter~\ref{sec:grinding_glass}, the description of the chemical-mechanical polishing is extremely complex, and it would be difficult to develop a model to predict and fit the results to the LIBS measurement.
 \\
@@ -102,7 +102,7 @@ In this chapter are described the setups for the various experimental environmen
 \section{LIBS}
 \label{sec:LIBS_apparatus}
 
-\subsection{Description of the apparatus}
+\subsection{Description of the Apparatus}
 \label{sec:Description_of_the_apparatus}
 
 As already anticipated in Chapter~\ref{sec:LIBS}, LIBS setup components are multiple.
@@ -497,7 +497,7 @@ In the end, the holder setup was completed utilizing a steel block with a weight
     P=\frac{1}{2}\frac{gM}{\pi\left(d/2\right)^2}\approx30\ kPa \label{eq:pressure_on_glass}
 \end{align}
 
-\subsubsection{Grinding paper and polishing pad}
+\subsubsection{Grinding Paper and Polishing Pad}
 \label{subsubsec:grinding_paper_and_pad}
 As for the grinding paper, a silicon carbide disk was employed with a grit size 220 (p240), while for the polishing cloth, a magnetic backed 8 inches disk made of synthetic rayon was used.
 \subsection{Parameters Chosen}
@@ -610,7 +610,7 @@ Some LIBS analyses were also performed on a sample of unused grinding paper. Sod
 The polishing pad was also subjected to the same kind of analysis. Not surprisingly, the results of the measurement showed that the main component of the pad is carbon, as it is the main constituent of the rayon fiber. Silicon has also been found present with a relative concentration of about 5\% while calcium only in concentrations smaller than 1\%.
 
 
-\subsubsection{Tap Water Chemical Composition}
+\subsubsection{Chemical Composition of Tap Water}
 \label{subsubsec:tap_water_chemical_comp}
 The type of water mostly used in the optics manufacturing industry is tap water. In Germany, public water quality is periodically checked and an elemental composition analysis for the tap water in Göttingen is easily accessible from public databases. In Table~\ref{table:water_composition} are shown the main elements dissolved in the water we used during both the grinding and polishing processes:
 
@@ -645,7 +645,7 @@ This was particularly challenging due to the need to ensure the contact of the g
 \\
 But due to the extremely high dissolving power of distilled water, the risk of accidentally dissolving species into the solution was always a concern.
 
-\section{Other apparatuses}
+\section{Other Apparatuses}
 \label{sec:other_apparatuses}
 Other than LIBS, experiments were also carried out on FTIR, XPS and contact angle measuring systems. Since they were not the focus of our research, in this section will be presented only a brief description of the apparatuses we used.
 
