--- a/5_experimental_results.tex
+++ b/5_experimental_results.tex
@@ -509,7 +509,7 @@ Even in this case, none of the data related to the contaminants could be fitted 
 
 From these graphs it is clear that, not only there is still presence of alkali metal contaminants even for distilled water, but the detected concentration is equal, or even slightly higher, to the case of tap water. In addition, Figure~\ref{fig:water_comp_al} shows an average concentration of aluminum that is almost a factor of two higher at every polishing time for the case of distilled water.
 
-\section{Considerations}
+\section{Interpretation of the Results}
 \label{sec:considerations}
 The most important consideration that can be drawn from all the LIBS data is the fact that diffusion cannot be the main driving mechanism under the presence of contaminants at the surface of the glass. The trend for the contaminants' concentration was decreasing for all the samples measured, and Fick's laws (Equation~\ref{eq:second_fick}) cannot describe in any way a decreasing concentration of particles when there is a constant source of diffusant, like in the case of polishing. Additionally, such a high presence of contaminants even after just one minute of polishing, would've required a diffusion constant way above the values that are reasonably associated with a diffusion process into a solid sample.
 \\
