--- a/Thesis.tex
+++ b/Thesis.tex
@@ -133,11 +133,11 @@
 \puttitle{
 	title = Use of Laser Induced Breakdown Spectroscopy to investigate the chemical composition of glass surfaces after optics manufacturing, % Title of the thesis
 	name = {Davide Notaro, Emanuele Locati}, %\and Davide Notaro, % Author Name and Surname
-	course=Physics Engineering - Ingegneria Fisica, % Study Programme (in Italian)
-	ID  = {103558, 103577},  % Student ID number (numero di matricola)
+	course = Engineering Physics - Ingegneria Fisica, % Study Programme (in Italian)
+	ID = {103558, 103577},  % Student ID number (numero di matricola)
     coadvisor=, % Co-Supervisor name, remove this line if there is none
-	advisor= Prof. Christoph Gerhard, % Supervisor name
-	academicyear={2023-2024},  % Academic Year
+	advisor = Prof. Christoph Gerhard, % Supervisor name
+	academicyear = {2023-2024},  % Academic Year
 } % These info will be put into your Title page 
 
 	
