--- a/Thesis.tex
+++ b/Thesis.tex
@@ -132,9 +132,9 @@
 
 \puttitle{
 	title = Use of Laser Induced Breakdown Spectroscopy to investigate the chemical composition of glass surfaces after optics manufacturing, % Title of the thesis
-	name = {Davide Notaro, Emanuele Locati}, %\and Davide Notaro, % Author Name and Surname
+	name = {Emanuele Locati, Davide Notaro}, %\and Davide Notaro, % Author Name and Surname
 	course = Engineering Physics - Ingegneria Fisica, % Study Programme (in Italian)
-	ID = {103558, 103577},  % Student ID number (numero di matricola)
+	ID = {103577, 103558},  % Student ID number (numero di matricola)
     coadvisor=, % Co-Supervisor name, remove this line if there is none
 	advisor = Prof. Christoph Gerhard, % Supervisor name
 	academicyear = {2023-2024},  % Academic Year
