--- a/Thesis_bibliography.bib
+++ b/Thesis_bibliography.bib
@@ -543,10 +543,11 @@
   langid = {english}
 }
 
+%https://www.schott.com/shop/medias/schott-tie-35-transmittance-of-optical-glass-eng.pdf?context=bWFzdGVyfHJvb3R8NzYxOTY3fGFwcGxpY2F0aW9uL3BkZnxoM2MvaGQ1Lzg4MTc0MDk5MTY5NTgucGRmfGY0ZWVlNWRmMDczYjliNjA0MWJiMDg3NTlkMDZhODRmZmNmNGNiOTNjOTg0Y2ZiMjY1YmMwNDUwZWU2NjU4NGE
 @misc{HttpsWwwSchott,
-  title = {{{https://www.schott.com/shop/medias/schott-tie-35-transmittance-of-optical-glass-eng.pdf?context=bWFzdGVyfHJvb3R8NzYxOTY3fGFwcGxpY2F0aW9uL3BkZnxoM2MvaGQ1Lzg4MTc0MDk5MTY5NTgucGRmfGY0ZWVlNWRmMDczYjliNjA0MWJiMDg3NTlkMDZhODRmZmNmNGNiOTNjOTg0Y2ZiMjY1YmMwNDUwZWU2NjU4NGE}}},
+  title = {{{https://www.schott.com/shop/medias/schott-tie-35-transmittance-of-optical-glass-eng.pdf}}},
   urldate = {2024-03-12},
-  howpublished = {https://www.schott.com/shop/medias/schott-tie-35-transmittance-of-optical-glass-eng.pdf?context=bWFzdGVyfHJvb3R8NzYxOTY3fGFwcGxpY2F0aW9uL3BkZnxoM2MvaGQ1Lzg4MTc0MDk5MTY5NTgucGRmfGY0ZWVlNWRmMDczYjliNjA0MWJiMDg3NTlkMDZhODRmZmNmNGNiOTNjOTg0Y2ZiMjY1YmMwNDUwZWU2NjU4NGE}
+  howpublished = {}
 }
 
 @article{huertaGrindingGlassMechanics1976,
@@ -942,10 +943,11 @@
   file = {C:\Users\davno\Zotero\storage\NZECAPG5\Neauport et al. - 2005 - Polishing-induced contamination of fused silica op.pdf}
 }
 
+%https://physics.nist.gov/PhysRefData/ASD/lines\_form.html
 @misc{NISTAtomicSpectra,
   title = {{{NIST}}: {{Atomic Spectra Database Lines Form}}},
   urldate = {2024-03-12},
-  howpublished = {https://physics.nist.gov/PhysRefData/ASD/lines\_form.html},
+  howpublished = {},
   file = {C:\Users\davno\Zotero\storage\LICEP2XH\lines_form.html}
 }
 
